[gd_scene load_steps=5 format=2]

[ext_resource path="res://Scenes/GameInfo/GameInfo.gd" type="Script" id=1]
[ext_resource path="res://assets/themes/minimalUI/MinimalUI.tres" type="Theme" id=2]
[ext_resource path="res://assets/font/BAARS.TTF" type="DynamicFontData" id=3]

[sub_resource type="DynamicFont" id=1]
size = 14
font_data = ExtResource( 3 )

[node name="GameInfo" type="Control"]
anchor_right = 1.0
anchor_bottom = 1.0
theme = ExtResource( 2 )
script = ExtResource( 1 )

[node name="ColorRect" type="ColorRect" parent="."]
margin_right = 800.0
margin_bottom = 400.0
color = Color( 0.078125, 0.078125, 0.078125, 0.862745 )

[node name="btn_back" type="Button" parent="ColorRect"]
margin_left = 461.0
margin_top = -7.5
margin_right = 501.0
margin_bottom = 22.5
text = "X"

[node name="Panel" type="Panel" parent="."]
margin_left = 248.0
margin_top = 66.0
margin_right = 524.0
margin_bottom = 348.0

[node name="btn_back" type="Button" parent="Panel"]
anchor_left = 1.0
anchor_right = 1.0
margin_left = -40.0
margin_bottom = 30.0
text = "X"

[node name="btn_play" type="Button" parent="Panel"]
anchor_left = 1.0
anchor_top = 1.0
anchor_right = 1.0
anchor_bottom = 1.0
margin_left = -125.0
margin_top = -30.0
text = "JUGAR >"

[node name="btn_delete" type="Button" parent="Panel"]
anchor_top = 1.0
anchor_bottom = 1.0
margin_top = -30.0
margin_right = 114.0
custom_colors/font_color_disabled = Color( 1, 0, 0, 1 )
custom_colors/font_color_focus = Color( 1, 0, 0, 1 )
custom_colors/font_color = Color( 1, 0, 0, 1 )
custom_colors/font_color_hover = Color( 1, 0, 0, 1 )
custom_colors/font_color_pressed = Color( 1, 0, 0, 1 )
text = "ELIMINAR"

[node name="Title" type="Label" parent="Panel"]
anchor_right = 1.0
margin_left = 14.0
margin_right = -48.0
margin_bottom = 28.0
text = "GAME TITLE"
valign = 1

[node name="ScrollInfo" type="ScrollContainer" parent="Panel"]
anchor_right = 1.0
anchor_bottom = 1.0
margin_left = 21.0
margin_top = 37.0
margin_right = -19.0
margin_bottom = -38.0

[node name="Info" type="Label" parent="Panel/ScrollInfo"]
margin_right = 65.0
margin_bottom = 17.0
custom_colors/font_color = Color( 0.807843, 0.807843, 0.807843, 1 )
custom_fonts/font = SubResource( 1 )
text = "GAME INFO"
